--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body class="mainpages">
+<body class="mainpage" id="mainpage">
   <%= render '/shared/navbar' %>
   <%= react_component 'Products', { products: @products } %>
   <%= react_component 'Categories', { data: @categories } %>
