--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
 </head>
 <body class="mainpage" id="mainpage">
   <%= render '/shared/navbar' %>
-  <%= react_component 'Products', { products: @products } %>
-  <%= react_component 'Categories', { data: @categories } %>
+  <%#= react_component 'Products', { products: @products } %>
+  <%#= react_component 'Categories', { data: @categories } %>
 
   <%= yield %>
 
