--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,16 +5,16 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css">
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body class="mainpage" id="mainpage">
-  <%= render '/shared/navbar' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%#= render '/shared/navbar' %>
   <%#= react_component 'Products', { products: @products } %>
   <%#= react_component 'Categories', { data: @categories } %>
 
-  <%= yield %>
+  <%#= yield %>
 
-  <%= render '/shared/footer' %>
+  <%#= render '/shared/footer' %>
 </body>
 </html>
