--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,19 +2,22 @@
 <html>
 <head>
   <title>Shpf</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link href="http://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet" type="text/css">
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
+  <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+  <link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tags %>
 </head>
-<body class="mainpage" id="mainpage">
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%#= render '/shared/navbar' %>
-  <%#= react_component 'Products', { products: @products } %>
-  <%#= react_component 'Categories', { data: @categories } %>
-
-  <%#= yield %>
-
-  <%#= render '/shared/footer' %>
+<body>
+  <div id='mainpage'>
+    <%= render '/shared/navbar' %>
+  </div>
+  <div id='maincontainer'>
+    <%= yield %>
+  </div>
+  <div id='footer'>
+    <%= render '/shared/footer' %>
+  </div>
+  
 </body>
+<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 </html>
