--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -1,4 +1,3 @@
-<!--
 <div class="container">
   <div class="splashbanner">
     <div class="col-md-4 col-sm-6">
@@ -12,4 +11,6 @@
     </div>
   </div>
 </div>
--->
+
+
+<%= render '/shared/slider' %>
